download date changes

--- a/1_OSI_SAF_sea_ice_introductory/1_1b_OSI_SAF_sea_ice_C3S_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1b_OSI_SAF_sea_ice_C3S_data_access.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,28 +209,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2026-01-09 12:09:13,034 INFO [2025-11-11T00:00:00] A new version has been added requiring a change to the download form. Users are advised that CDS API requests will need to be manually updated to accommodate this change.\n",
-      "2026-01-09 12:09:13,035 INFO Request ID is 9f2827fd-9cd6-4663-a901-accda2eb27dd\n",
-      "2026-01-09 12:09:13,107 INFO status has been updated to accepted\n",
-      "2026-01-09 12:09:46,297 INFO status has been updated to successful\n"
+      "2026-01-09 13:32:53,166 INFO [2025-11-11T00:00:00] A new version has been added requiring a change to the download form. Users are advised that CDS API requests will need to be manually updated to accommodate this change.\n",
+      "2026-01-09 13:32:53,168 INFO Request ID is be5407b0-130a-41d8-93f8-db8aa452dc71\n",
+      "2026-01-09 13:32:53,525 INFO status has been updated to accepted\n",
+      "2026-01-09 13:33:07,024 INFO status has been updated to running\n",
+      "2026-01-09 13:33:14,703 INFO status has been updated to successful\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e9eef414a8a4b3381d299480275bbfd",
+       "model_id": "e31d241a81c24e72945f1a594f58c843",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "fadcef2f596a1109f21b77df888e4ea9.zip:   0%|          | 0.00/1.09M [00:00<?, ?B/s]"
+       "68c2216b401e80bb11ed6fe6753a5757.zip:   0%|          | 0.00/1.08M [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -242,7 +243,7 @@
        "'/data/dev_gwen/EO_lab/learn-osi-saf-sea-ice/1_OSI_SAF_sea_ice_introductory/products/SI_concentration_SSM_ICDR3/nh/download.zip'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,9 +257,9 @@
     "    \"region\": [\"northern_hemisphere\"],\n",
     "    \"cdr_type\": [\"icdr\"],\n",
     "    \"temporal_aggregation\": \"daily\",\n",
-    "    \"year\": [\"2023\"],\n",
-    "    \"month\": [\"04\"],\n",
-    "    \"day\": [\"30\"]\n",
+    "    \"year\": [\"2025\"],\n",
+    "    \"month\": [\"05\"],\n",
+    "    \"day\": [\"22\"]\n",
     "}\n",
     "\n",
     "client = cdsapi.Client()\n",
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
