--- a/1_OSI_SAF_sea_ice_introductory/1_1b_OSI_SAF_sea_ice_C3S_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1b_OSI_SAF_sea_ice_C3S_data_access.ipynb
@@ -80,11 +80,11 @@
     "### Learning outcomes\n",
     "\n",
     "At the end of this notebook you will know;\n",
-    "* How to download OSI SAF Sea Ice Products using Copernicus Climate change data access\n",
+    "* How to download OSI SAF Sea Ice Products using Copernicus Climate Change Service (C3S) data access website.\n",
     "\n",
     "### Outline\n",
     "\n",
-    "Data from OSI SAF is available through multiple sources. Here we will guide you through  Copernicus Climate change data acces to OSI SAF Sea Ice Data.\n",
+    "Data from OSI SAF are available through multiple sources. The Sea Ice climate data records are available through Copernicus Climate Change Service (C3S). We'll here explore how to download the data from this data store.\n",
     "\n",
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
@@ -203,8 +203,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the copenicus climate change data access website, you can choose the products you want to visualize. For example the osi saf sea ice product : Sea ice concentration daily gridded data from 1979 to present derived from satellite observations.\n",
-    "Then, you can select the region, the date, ... At the end a API request will be provide and you can paste it (see the following code)."
+    "From the C3S data access website, you can access our Sea Ice Concentration CDRs and ICDRs (both SSM and AMSR), as well as our Sea Ice Drift CDR and ICDR. We'll here follow the steps to download data from the SSM data record. \n",
+    "In order to ease the ploting later on, we will here download file for the same date as we did with the FTP. \n",
+    "\n",
+    "You have to select parameters for all of the variables for the C3S API to correclty function. All of the variable are to be found on the dataset <a href=\"https://cds.climate.copernicus.eu/datasets/satellite-sea-ice-concentration?tab=download\">description page</a>. At the end a API request will be provide and you can paste it (see the following code)."
    ]
   },
   {
