--- a/1_OSI_SAF_sea_ice_introductory/1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "<font color=\"#138D75\">**EUMETSAT OSI SAF Training Service**</font> <br>\n",
-    "**Copyright:** 2024 EUMETSAT <br>\n",
+    "**Copyright:** 2026 EUMETSAT <br>\n",
     "**License:** MIT"
    ]
   },
@@ -31,7 +31,7 @@
    "source": [
     "<html>\n",
     "  <div style=\"width:100%\">\n",
-    "    <div style=\"float:left\"><a href=\"https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fsensors%2Flearn-osi-saf-sea-ice/HEAD?labpath=1_OSI_SAF_sea_ice_introductory%2F1_1_OSI_SAF_sea_ice_FTP_data_access.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open in Binder\"></a></div>\n",
+    "    <div style=\"float:left\"><a href=\"https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fsensors%2Flearn-osi-saf-sea-ice/HEAD?labpath=1_OSI_SAF_sea_ice_introductory%2F1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open in Binder\"></a></div>\n",
     "    <div style=\"float:left\"><p>&emsp;</p></div>\n",
     "  </div>\n",
     "</html>"
@@ -69,32 +69,26 @@
     "tags": []
    },
    "source": [
-    "# 1.1b Accessing all OSI SAF sea ice products from Copernicus Marine Data service\n",
-    "### Data used \n",
+    "# 1.1b Accessing OSI SAF sea ice products from Copernicus Marine Data service\n",
+    "### Data concerned \n",
     "\n",
     "| Dataset | EUMETSAT collection ID | OSI SAF website description | OSI SAF identifier |\n",
     "|:-----------------:|:-----------------:|:-----------------:|:-----------------:|\n",
-    "| Global Sea Ice Concentration (SSMIS) | EO:EUM:DAT:DMSP:OSI-401-B | <a href=\"https://osi-saf.eumetsat.int/products/osi-401-b\" target=\"_blank\">Description</a>   | OSI-401-B |\n",
+    "| Global Sea Ice Concentration (AMSR-2) | EO:EUM:DAT:GCOM:OSI-408 | <a href=\"https://osi-saf.eumetsat.int/products/osi-408-a\" target=\"_blank\">Description</a> | OSI-408-a | \n",
     "| Global Sea Ice Edge | EO:EUM:DAT:MULT:OSIEDGBN | <a href=\"https://osi-saf.eumetsat.int/products/osi-402-d\" target=\"_blank\">Description</a> | OSI-402-d | \n",
     "| Global Sea Ice Type | EO:EUM:DAT:MULT:OSITYGBN | <a href=\"https://osi-saf.eumetsat.int/products/osi-403-d\" target=\"_blank\">Description</a> | OSI-403-d | \n",
-    "| Global Sea Ice Emissivity | EO:EUM:DAT:DMSP:SISE50 | <a href=\"https://osi-saf.eumetsat.int/products/osi-404-a\" target=\"_blank\">Description</a> | OSI-404-a | \n",
     "| Global Low Resolution Sea Ice Drift | EO:EUM:DAT:MULT:GBL-LR-SIDR | <a href=\"https://osi-saf.eumetsat.int/products/osi-405-c\" target=\"_blank\">Description</a> | OSI-405-c | \n",
-    "| Medium Resolution Sea Ice Drift | EO:EUM:DAT:METOP:NH-MR-SID | <a href=\"https://osi-saf.eumetsat.int/products/osi-407-a\" target=\"_blank\">Description</a> | OSI-407-a | \n",
-    "| Global Sea Ice Concentration (AMSR-2) | EO:EUM:DAT:GCOM:OSI-408 | <a href=\"https://osi-saf.eumetsat.int/products/osi-408-a\" target=\"_blank\">Description</a> | OSI-408-a | \n",
-    "| Level 2 PMW sea ice concentration | - | <a href=\"https://osi-saf.eumetsat.int/products/osi-410-a\" target=\"_blank\">Description</a> | OSI-410-a | \n",
-    "| Global Sea Ice Concentration interim climate data record, release 3 | EO:EUM:DAT:0645 | <a href=\"https://osi-saf.eumetsat.int/products/osi-430-a\" target=\"_blank\">Description</a> | OSI-430-a \n",
     "| Global Sea Ice Concentration climate data record (SMMR/SSMI/SSMIS), release 3 | EO:EUM:DAT:0826 | <a href=\"https://osi-saf.eumetsat.int/products/osi-450-a\" target=\"_blank\">Description</a> | OSI-450-a \n",
-    "| Global Sea Ice Concentration climate data record (AMSR), release 3 | EO:EUM:DAT:0797 | <a href=\"https://osi-saf.eumetsat.int/products/osi-458\" target=\"_blank\">Description</a> | OSI-458 \n",
-    "| Sea ice index | - | <a href=\"https://osi-saf.eumetsat.int/products/osi-420\" target=\"_blank\">Description</a> | OSI-420 \n",
+    "| Global Sea Ice Concentration interim climate data record, release 3 | EO:EUM:DAT:0645 | <a href=\"https://osi-saf.eumetsat.int/products/osi-430-a\" target=\"_blank\">Description</a> | OSI-430-a \n",
     "\n",
     "### Learning outcomes\n",
     "\n",
-    "At the end of this notebook you will know;\n",
-    "* How to download different OSI SAF Sea Ice Products using FTP access\n",
+    "At the end of this notebook you will know:\n",
+    "* How to access and download different OSI SAF Sea Ice Products using Copernicus Marine Service (CMEMS) API\n",
     "\n",
     "### Outline\n",
     "\n",
-    "Data from OSI SAF is available through multiple sources. Here we will guide you through FTP access to OSI SAF Sea Ice Data.\n",
+    "Copernicus Marine Service is re-distributing OSI SAF data Sea Ice. Here we will present you how do use their API to access OSI SAF Sea Ice Data.\n",
     "\n",
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
@@ -115,7 +109,7 @@
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
-    "## <a id='section1'></a>1. Creating the workspace\n",
+    "## <a id='section1'></a>1. Creating our workspace\n",
     "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>\n",
@@ -125,21 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# library imports \n",
     "import os           # a library that allows to access to basic operating system commands like making directories\n",
-    "import json         # a library that helps with JSON format files\n",
-    "import ftplib       # a library that allows to handle ftp requests"
+    "import copernicusmarine # an API developped by CMEMS to explore its data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we will create a download directory to store the products we will download in this notebook."
+    "Next we will login to our "
    ]
   },
   {
@@ -1873,7 +1866,7 @@
   "description": "This Jupyter Notebook shows how to access OSI SAF sea ice data via CMEMS.",
   "image": "../img/thumbs/1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.png",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "cmts_learn_osi_saf_sea_ice_2",
    "language": "python",
    "name": "python3"
   },
@@ -1887,7 +1880,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.19"
   },
   "license": "MIT",
   "metadata_schema_version": "2.0.0",
