Copernicusmarine.subset description

--- a/1_OSI_SAF_sea_ice_introductory/1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.ipynb
@@ -98,7 +98,9 @@
     "    \n",
     " 1. [Creating our workspace](#section1)\n",
     " 1. [Setting login information](#section2)\n",
-    " 1. [Downloading via FTP requests](#section3)\n",
+    " 1. [Downloading original files](#section3)\n",
+    " 1. [Downloading a subset](#section4)\n",
+    " 1. [Datasets available on CMEMS and their identifiers](#section5)\n",
     "\n",
     "<hr>"
    ]
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +217,7 @@
    "source": [
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
-    "## <a id='section3'></a>3. Launch a request `get` request\n",
+    "## <a id='section3'></a>3. Download original files\n",
     "[Back to top](#TOC-TOP)\n",
     "\n",
     "</div>"
@@ -227,8 +229,6 @@
     "tags": []
    },
    "source": [
-    "### Global Sea Ice Concentration (AMSR2):\n",
-    "\n",
     "Each of the Sea Ice OSI SAF products redistribution gets an identifier per hemisphere. Using this identifier for the AMSR based Sea Ice Concentration product over the Northern Hemisphere, let's download original OSI SAF products files using the `get` function. \n"
    ]
   },
@@ -280,6 +280,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "\n",
+    "## <a id='section4'></a>4. Download a subset of a dataset\n",
+    "[Back to top](#TOC-TOP)\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Copernicusmarine allows as well the download of a subset of a dataset, by specifying variables such as the geographical area or a time range. We will here download a dataset zooming on the Fram Strait in mai 2025:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO - 2026-01-14T12:55:58Z - Selected dataset version: \"202304\"\n",
+      "INFO - 2026-01-14T12:55:58Z - Selected dataset part: \"default\"\n",
+      "INFO - 2026-01-14T12:55:58Z - Starting download. Please wait...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2e5f0663a1b2403887bd8e9686358f56",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/14 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO - 2026-01-14T12:56:02Z - Successfully downloaded to products/CMEMS/osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_multi-vars_18.90W-16.00E_70.00N-84.90N_2025-05-01-2025-05-31.nc\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ResponseSubset(file_path=PosixPath('products/CMEMS/osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_multi-vars_18.90W-16.00E_70.00N-84.90N_2025-05-01-2025-05-31.nc'), output_directory=PosixPath('products/CMEMS'), filename='osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_multi-vars_18.90W-16.00E_70.00N-84.90N_2025-05-01-2025-05-31.nc', file_size=37.283992366412214, data_transfer_size=499.774534351145, variables=['algorithm_uncertainty', 'ice_conc', 'raw_ice_conc_values', 'smearing_uncertainty', 'status_flag', 'total_uncertainty'], coordinates_extent=[GeographicalExtent(minimum=-18.900000000009157, maximum=15.999999999988859, unit='degrees_east', coordinate_id='longitude'), GeographicalExtent(minimum=70.00000000000057, maximum=84.90000000000077, unit='degrees_north', coordinate_id='latitude'), TimeExtent(minimum='2025-05-01T00:00:00+00:00', maximum='2025-05-31T00:00:00+00:00', unit='iso8601', coordinate_id='time')], status='000', message='The request was successful.', file_status='DOWNLOADED')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "copernicusmarine.subset(\n",
+    "   dataset_id = \"osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m\",\n",
+    "   start_datetime = \"2025-05-01\",\n",
+    "   end_datetime = \"2025-05-31\",\n",
+    "   minimum_longitude = -19,\n",
+    "   maximum_longitude = 16, \n",
+    "   minimum_latitude = 70,\n",
+    "   maximum_latitude = 85,\n",
+    "   output_directory = \"products/CMEMS\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You will find a full documentation of the `subset` function <a href=\"https://help.marine.copernicus.eu/en/articles/8283072-copernicus-marine-toolbox-api-subset\">online</a>.\n",
+    "\n",
+    "For more information about copernicusmarine, check the <a href=\"https://help.marine.copernicus.eu/en/articles/7949409-copernicus-marine-toolbox-introduction\">Copernicus Marine Toolbox page</a>, which extensively describes the tools and its uses."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "\n",
+    "## <a id='section5'></a>5. Datasets available on CMEMS and their identifiers\n",
+    "[Back to top](#TOC-TOP)\n",
+    "\n",
+    "</div>\n",
+    "\n",
     "Here is a list of near real time Sea Ice Product redistributed by CMEMS, with their CMEMS identifiers :\n",
     "\n",
     "| Dataset |  OSI SAF identifier | Hemisphere | CMEMS identifier |\n",
