--- a/1_OSI_SAF_sea_ice_introductory/1_1b_OSI_SAF_sea_ice_C3S_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1b_OSI_SAF_sea_ice_C3S_data_access.ipynb
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_concentration_SSM_ICDR3\", \"nh\")\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"C3S\")\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -203,8 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the C3S data access website, you can access our Sea Ice Concentration CDRs and ICDRs (both SSM and AMSR), as well as our Sea Ice Drift CDR and ICDR. We'll here follow the steps to download data from the SSM data record. \n",
-    "In order to ease the ploting later on, we will here download file for the same date as we did with the FTP. \n",
+    "From the C3S data access website, you can access our Sea Ice Concentration CDRs and ICDRs (both SSM and AMSR), as well as our Sea Ice Drift CDR and ICDR. We'll here follow the steps to download data from the SSM data record.\n",
     "\n",
     "You have to select parameters for all of the variables for the C3S API to correclty function. All of the variable are to be found on the dataset <a href=\"https://cds.climate.copernicus.eu/datasets/satellite-sea-ice-concentration?tab=download\">description page</a>. At the end a API request will be provide and you can paste it (see the following code)."
    ]
@@ -218,21 +217,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2026-01-09 13:45:27,640 INFO [2025-11-11T00:00:00] A new version has been added requiring a change to the download form. Users are advised that CDS API requests will need to be manually updated to accommodate this change.\n",
-      "2026-01-09 13:45:27,642 INFO Request ID is 62400049-4db3-4bbf-8cc8-7dd8ff88731d\n",
-      "2026-01-09 13:45:27,711 INFO status has been updated to accepted\n",
-      "2026-01-09 13:45:48,831 INFO status has been updated to successful\n"
+      "2026-01-14 13:06:20,314 INFO [2025-11-11T00:00:00] A new version has been added requiring a change to the download form. Users are advised that CDS API requests will need to be manually updated to accommodate this change.\n",
+      "2026-01-14 13:06:20,316 INFO Request ID is 8bab3be8-7902-48da-a439-fa467c4d0e39\n",
+      "2026-01-14 13:06:20,387 INFO status has been updated to accepted\n",
+      "2026-01-14 13:06:53,070 INFO status has been updated to running\n",
+      "2026-01-14 13:07:10,249 INFO status has been updated to successful\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "715f27ecaac64d3d9d1c90a307a48a27",
+       "model_id": "bbb5475fbd504eb4beba0ba604a91987",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "68c2216b401e80bb11ed6fe6753a5757.zip:   0%|          | 0.00/1.08M [00:00<?, ?B/s]"
+       "b7ce100a3a3535236c470513bc26e04e.zip:   0%|          | 0.00/1.08M [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -241,7 +241,7 @@
     {
      "data": {
       "text/plain": [
-       "'/data/dev_gwen/EO_lab/learn-osi-saf-sea-ice/1_OSI_SAF_sea_ice_introductory/products/SI_concentration_SSM_ICDR3/nh/download.zip'"
+       "'/data/dev_gwen/EO_lab/learn-osi-saf-sea-ice/1_OSI_SAF_sea_ice_introductory/products/C3S/download.zip'"
       ]
      },
      "execution_count": 4,
