--- a/Index.ipynb
+++ b/Index.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "<font color=\"#138D75\">**EUMETSAT OSI SAF Training Service**</font> <br>\n",
-    "**Copyright:** 2024 EUMETSAT<br>\n",
+    "**Copyright:** 2026 EUMETSAT<br>\n",
     "**License:** MIT"
    ]
   },
@@ -67,7 +67,7 @@
     "\n",
     "Users are highly recommended to register on the OSI SAF web Site  in order to get access to useful information, documentation and links, news, service messages, and access to the help desk.\n",
     "\n",
-    "Further information on the sensor and its data can be found at https://osi-saf.eumetsat.int and in the https://osi-saf.eumetsat.int/products/sea-surface-temperature-products Sea Ice Parameters products page</a>.\n",
+    "Further information on the sensor and its data can be found at <a href=\"https://osi-saf.eumetsat.int\">https://osi-saf.eumetsat.int</a> and in the <a href=\"https://osi-saf.eumetsat.int/products/sea-ice-products\">Sea Ice Parameters products page</a>.\n",
     "<hr>\n",
     "\n",
     "### Module outline\n",
