small update folder name

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -1978,7 +1978,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_drift_lr\", hemisphere)\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_drift\", hemisphere)\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -2046,7 +2046,7 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_drift_lr', hemisphere, filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_drift', hemisphere, filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
@@ -2072,7 +2072,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_drift_lr\", hemisphere)\n",
+    "download_dir = os.path.join(os.getcwd(), \"products\", \"SI_drift\", hemisphere)\n",
     "os.makedirs(download_dir, exist_ok=True)"
    ]
   },
@@ -2131,7 +2131,7 @@
     "for file in files:\n",
     "    if file_pattern in file:\n",
     "        filename = file\n",
-    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_drift_lr', hemisphere, filename), 'wb').write)\n",
+    "ftp.retrbinary(\"RETR \" + filename, open(os.path.join(os.getcwd(), 'products', 'SI_drift', hemisphere, filename), 'wb').write)\n",
     "ftp.quit()"
    ]
   },
