data used update

--- a/1_OSI_SAF_sea_ice_introductory/1_2_OSI_SAF_sea_ice_file_structure.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_2_OSI_SAF_sea_ice_file_structure.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "| Dataset | EUMETSAT collection ID | OSI SAF website description | OSI SAF identifier |\n",
     "|:-----------------:|:-----------------:|:-----------------:|:-----------------:|\n",
-    "| Global Sea Ice Concentration (SSMIS) | EO:EUM:DAT:DMSP:OSI-401-B | <a href=\"https://osi-saf.eumetsat.int/products/osi-401-b\" target=\"_blank\">Description</a>   | OSI-401-B |\n",
+    "| Global Sea Ice Concentration (AMSR2) | EO:EUM:DAT:GCOM:OSI-408 | <a href=\"https://osi-saf.eumetsat.int/products/osi-408-a\" target=\"_blank\">Description</a> | OSI-408-a | \n",
     "| Global Sea Ice Edge | EO:EUM:DAT:MULT:OSIEDGBN | <a href=\"https://osi-saf.eumetsat.int/products/osi-402-d\" target=\"_blank\">Description</a> | OSI-402-d | \n",
     "| Global Sea Ice Type | EO:EUM:DAT:MULT:OSITYGBN | <a href=\"https://osi-saf.eumetsat.int/products/osi-403-d\" target=\"_blank\">Description</a> | OSI-403-d | \n",
     "| Global Sea Ice Emissivity | EO:EUM:DAT:DMSP:SISE50 | <a href=\"https://osi-saf.eumetsat.int/products/osi-404-a\" target=\"_blank\">Description</a> | OSI-404-a | \n",
