--- a/1_OSI_SAF_sea_ice_introductory/1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,28 +165,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - 2026-01-14T09:53:40Z - Downloading Copernicus Marine data requires a Copernicus Marine username and password, sign up for free at: https://data.marine.copernicus.eu/register\n"
+      "INFO - 2026-01-14T14:06:15Z - Downloading Copernicus Marine data requires a Copernicus Marine username and password, sign up for free at: https://data.marine.copernicus.eu/register\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copernicus Marine username:Copernicus Marine password:File /home/lebrasg/.copernicusmarine/.copernicusmarine-credentials already exists, overwrite it ? [y/N]:"
+      "Copernicus Marine username:Copernicus Marine password:"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - 2026-01-14T09:54:31Z - Credentials file stored in /home/lebrasg/.copernicusmarine/.copernicusmarine-credentials.\n"
+      "INFO - 2026-01-14T14:06:45Z - Credentials file stored in /home/lebrasg/.copernicusmarine/.copernicusmarine-credentials.\n"
      ]
     },
     {
@@ -195,7 +195,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,18 +234,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - 2026-01-14T10:49:19Z - Selected dataset version: \"202304\"\n",
-      "INFO - 2026-01-14T10:49:19Z - Selected dataset part: \"default\"\n",
-      "INFO - 2026-01-14T10:49:19Z - Listing files on remote server...\n",
-      "2it [00:00,  4.72it/s]\n",
-      "Downloading files: 100%|██████████| 3/3 [00:00<00:00,  4.06it/s]\n"
+      "INFO - 2026-01-14T14:06:45Z - Selected dataset version: \"202304\"\n",
+      "INFO - 2026-01-14T14:06:45Z - Selected dataset part: \"default\"\n",
+      "INFO - 2026-01-14T14:06:46Z - Listing files on remote server...\n",
+      "2it [00:00,  8.03it/s]\n",
+      "Downloading files: 100%|██████████| 3/3 [00:01<00:00,  2.46it/s]\n"
      ]
     },
     {
@@ -254,7 +254,7 @@
        "ResponseGet(files=[FileGet(s3_url='s3://mdl-native-09/native/SEAICE_GLO_SEAICE_L4_NRT_OBSERVATIONS_011_001/osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_202304/2025/05/ice_conc_nh_polstere-100_amsr2_202505211200.nc', https_url='https://s3.waw3-1.cloudferro.com/mdl-native-09/native/SEAICE_GLO_SEAICE_L4_NRT_OBSERVATIONS_011_001/osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_202304/2025/05/ice_conc_nh_polstere-100_amsr2_202505211200.nc', file_size=9.023956298828125, last_modified_datetime='2025-05-22T02:16:11.072000+00:00', etag='\"e9917bcd19827b54c44b5b9d1bb9290a-2\"', file_format='.nc', output_directory=PosixPath('products/CMEMS'), filename='ice_conc_nh_polstere-100_amsr2_202505211200.nc', file_path=PosixPath('products/CMEMS/ice_conc_nh_polstere-100_amsr2_202505211200.nc'), file_status='DOWNLOADED'), FileGet(s3_url='s3://mdl-native-09/native/SEAICE_GLO_SEAICE_L4_NRT_OBSERVATIONS_011_001/osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_202304/2025/05/ice_conc_nh_polstere-100_amsr2_202505221200.nc', https_url='https://s3.waw3-1.cloudferro.com/mdl-native-09/native/SEAICE_GLO_SEAICE_L4_NRT_OBSERVATIONS_011_001/osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_202304/2025/05/ice_conc_nh_polstere-100_amsr2_202505221200.nc', file_size=8.987110137939453, last_modified_datetime='2025-05-23T02:16:18.546000+00:00', etag='\"4a4a346fb3f3c6706ab21ce2ca80d290-2\"', file_format='.nc', output_directory=PosixPath('products/CMEMS'), filename='ice_conc_nh_polstere-100_amsr2_202505221200.nc', file_path=PosixPath('products/CMEMS/ice_conc_nh_polstere-100_amsr2_202505221200.nc'), file_status='DOWNLOADED'), FileGet(s3_url='s3://mdl-native-09/native/SEAICE_GLO_SEAICE_L4_NRT_OBSERVATIONS_011_001/osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_202304/2025/05/ice_conc_nh_polstere-100_amsr2_202505231200.nc', https_url='https://s3.waw3-1.cloudferro.com/mdl-native-09/native/SEAICE_GLO_SEAICE_L4_NRT_OBSERVATIONS_011_001/osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_202304/2025/05/ice_conc_nh_polstere-100_amsr2_202505231200.nc', file_size=9.013365745544434, last_modified_datetime='2025-05-24T02:15:33.186000+00:00', etag='\"a80df19731281389fe1d0892b5a8aef6-2\"', file_format='.nc', output_directory=PosixPath('products/CMEMS'), filename='ice_conc_nh_polstere-100_amsr2_202505231200.nc', file_path=PosixPath('products/CMEMS/ice_conc_nh_polstere-100_amsr2_202505231200.nc'), file_status='DOWNLOADED')], files_deleted=None, files_not_found=None, number_of_files_to_download=3, total_size=27.02443218231201, status='000', message='The request was successful.')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,22 +297,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - 2026-01-14T12:55:58Z - Selected dataset version: \"202304\"\n",
-      "INFO - 2026-01-14T12:55:58Z - Selected dataset part: \"default\"\n",
-      "INFO - 2026-01-14T12:55:58Z - Starting download. Please wait...\n"
+      "INFO - 2026-01-14T14:06:49Z - Selected dataset version: \"202304\"\n",
+      "INFO - 2026-01-14T14:06:49Z - Selected dataset part: \"default\"\n",
+      "INFO - 2026-01-14T14:06:50Z - Starting download. Please wait...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e5f0663a1b2403887bd8e9686358f56",
+       "model_id": "65668cf5c7be42ac995653ae1d013061",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,7 +327,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - 2026-01-14T12:56:02Z - Successfully downloaded to products/CMEMS/osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_multi-vars_18.90W-16.00E_70.00N-84.90N_2025-05-01-2025-05-31.nc\n"
+      "INFO - 2026-01-14T14:06:53Z - Successfully downloaded to products/CMEMS/osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_multi-vars_18.90W-16.00E_70.00N-84.90N_2025-05-01-2025-05-31.nc\n"
      ]
     },
     {
@@ -336,7 +336,7 @@
        "ResponseSubset(file_path=PosixPath('products/CMEMS/osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_multi-vars_18.90W-16.00E_70.00N-84.90N_2025-05-01-2025-05-31.nc'), output_directory=PosixPath('products/CMEMS'), filename='osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_multi-vars_18.90W-16.00E_70.00N-84.90N_2025-05-01-2025-05-31.nc', file_size=37.283992366412214, data_transfer_size=499.774534351145, variables=['algorithm_uncertainty', 'ice_conc', 'raw_ice_conc_values', 'smearing_uncertainty', 'status_flag', 'total_uncertainty'], coordinates_extent=[GeographicalExtent(minimum=-18.900000000009157, maximum=15.999999999988859, unit='degrees_east', coordinate_id='longitude'), GeographicalExtent(minimum=70.00000000000057, maximum=84.90000000000077, unit='degrees_north', coordinate_id='latitude'), TimeExtent(minimum='2025-05-01T00:00:00+00:00', maximum='2025-05-31T00:00:00+00:00', unit='iso8601', coordinate_id='time')], status='000', message='The request was successful.', file_status='DOWNLOADED')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
