OSI-430-a forgoten in data used

--- a/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1a_OSI_SAF_sea_ice_FTP_data_access.ipynb
@@ -76,7 +76,8 @@
     "|:-----------------:|:-----------------:|:-----------------:|:-----------------:|\n",
     "| Global Sea Ice Concentration (AMSR2) | EO:EUM:DAT:GCOM:OSI-408 | <a href=\"https://osi-saf.eumetsat.int/products/osi-408-a\" target=\"_blank\">Description</a> | OSI-408-a | \n",
     "| Level 2 PMW sea ice concentration | EO:EUM:DAT:0401  | <a href=\"https://osi-saf.eumetsat.int/products/osi-410-a\" target=\"_blank\">Description</a> | OSI-410-a | \n",
-    "| Global Sea Ice Concentration climate data record (SMMR/SSMI/SSMIS), release 3 | EO:EUM:DAT:0826 | <a href=\"https://osi-saf.eumetsat.int/products/osi-450-a\" target=\"_blank\">Description</a> | OSI-450-a \n",
+    "| Global Sea Ice Concentration climate data record (SMMR/SSMI/SSMIS), release 3 | EO:EUM:DAT:0826 | <a href=\"https://osi-saf.eumetsat.int/products/osi-450-a\" target=\"_blank\">Description</a> | OSI-450-a |\n",
+    "| Global Sea Ice Concentration interim climate data record (SSMIS), release 3 | EO:EUM:DAT:0645 | <a href=\"https://osi-saf.eumetsat.int/products/osi-430-a\" target=\"_blank\">Description</a> | OSI-430-a |\n",
     "| Global Sea Ice Concentration climate data record (AMSR), release 3 | EO:EUM:DAT:0797 | <a href=\"https://osi-saf.eumetsat.int/products/osi-458\" target=\"_blank\">Description</a> | OSI-458 \n",
     "| Global Sea Ice Concentration interim climate data record (AMSR2), release 3 | - | <a href=\"https://osi-saf.eumetsat.int/products/osi-438\" target=\"_blank\">Description</a> | OSI-438 |\n",
     "| Sea ice index | EO:EUM:DAT:0875  | <a href=\"https://osi-saf.eumetsat.int/products/osi-420\" target=\"_blank\">Description</a> | OSI-420 |\n",
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1965,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1974,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2000,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2023,7 +2024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2032,7 +2033,7 @@
        "'221 Goodbye.'"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2059,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2068,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2085,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2108,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2117,7 +2118,7 @@
        "'221 Goodbye.'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
