link to CMEMS data redistributions

--- a/1_OSI_SAF_sea_ice_introductory/1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.ipynb
+++ b/1_OSI_SAF_sea_ice_introductory/1_1c_OSI_SAF_sea_ice_Copernicus_marine_data_access.ipynb
@@ -172,7 +172,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - 2026-01-14T14:06:15Z - Downloading Copernicus Marine data requires a Copernicus Marine username and password, sign up for free at: https://data.marine.copernicus.eu/register\n"
+      "INFO - 2026-01-15T16:15:21Z - Downloading Copernicus Marine data requires a Copernicus Marine username and password, sign up for free at: https://data.marine.copernicus.eu/register\n"
      ]
     },
     {
@@ -186,7 +186,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - 2026-01-14T14:06:45Z - Credentials file stored in /home/lebrasg/.copernicusmarine/.copernicusmarine-credentials.\n"
+      "INFO - 2026-01-15T16:16:08Z - Credentials file stored in /home/lebrasg/.copernicusmarine/.copernicusmarine-credentials.\n"
      ]
     },
     {
@@ -241,11 +241,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - 2026-01-14T14:06:45Z - Selected dataset version: \"202304\"\n",
-      "INFO - 2026-01-14T14:06:45Z - Selected dataset part: \"default\"\n",
-      "INFO - 2026-01-14T14:06:46Z - Listing files on remote server...\n",
-      "2it [00:00,  8.03it/s]\n",
-      "Downloading files: 100%|██████████| 3/3 [00:01<00:00,  2.46it/s]\n"
+      "INFO - 2026-01-15T16:16:08Z - Selected dataset version: \"202304\"\n",
+      "INFO - 2026-01-15T16:16:08Z - Selected dataset part: \"default\"\n",
+      "INFO - 2026-01-15T16:16:09Z - Listing files on remote server...\n",
+      "2it [00:00,  7.61it/s]\n",
+      "Downloading files: 100%|██████████| 3/3 [00:01<00:00,  2.40it/s]\n"
      ]
     },
     {
@@ -304,15 +304,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - 2026-01-14T14:06:49Z - Selected dataset version: \"202304\"\n",
-      "INFO - 2026-01-14T14:06:49Z - Selected dataset part: \"default\"\n",
-      "INFO - 2026-01-14T14:06:50Z - Starting download. Please wait...\n"
+      "INFO - 2026-01-15T16:16:11Z - Selected dataset version: \"202304\"\n",
+      "INFO - 2026-01-15T16:16:11Z - Selected dataset part: \"default\"\n",
+      "INFO - 2026-01-15T16:16:11Z - Starting download. Please wait...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65668cf5c7be42ac995653ae1d013061",
+       "model_id": "6e07c6c3b2864fe9832f686019e594e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,7 +327,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - 2026-01-14T14:06:53Z - Successfully downloaded to products/CMEMS/osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_multi-vars_18.90W-16.00E_70.00N-84.90N_2025-05-01-2025-05-31.nc\n"
+      "INFO - 2026-01-15T16:16:15Z - Successfully downloaded to products/CMEMS/osisaf_obs-si_glo_phy-sic-north_nrt_amsr2_l4_P1D-m_multi-vars_18.90W-16.00E_70.00N-84.90N_2025-05-01-2025-05-31.nc\n"
      ]
     },
     {
@@ -374,7 +374,7 @@
     "\n",
     "</div>\n",
     "\n",
-    "Here is a list of near real time Sea Ice Product redistributed by CMEMS, with their CMEMS identifiers :\n",
+    "CMEMS gather all the near real time OSI SAF sea-ice products it redistributes as one single product. You can fine a description of it <a href=\"https://doi.org/10.48670/moi-00134\">there</a>. Here is a list of the OSI SAF product gathered there and their CMEMS identifiers :\n",
     "\n",
     "| Dataset |  OSI SAF identifier | Hemisphere | CMEMS identifier |\n",
     "|:-----------------:|:-----------------:|:-----------------:|:-----------------:|\n",
@@ -389,7 +389,7 @@
     "| Sea ice type | OSI-403-d | Northern Hemisphere | osisaf_obs-si_glo_phy-sitype_nrt_nh-P1D |\n",
     "| Sea ice type | OSI-403-d | Southern Hemisphere | osisaf_obs-si_glo_phy-sitype_nrt_sh-P1D |\n",
     "\n",
-    "Aside these near real time products, CMEMS redistributes as well the SSM based climate product, which are then available with the same API. Here are the identifiers:\n",
+    "Aside these near real time products, CMEMS redistributes as well the SSM based climate products (description <a href=\"https://doi.org/10.48670/moi-00136\">there</a>), which are then available with the same API. Here are the identifiers:\n",
     "\n",
     "| Dataset |  OSI SAF identifier | Temporal coverage | Hemisphere | CMEMS identifier |\n",
     "|:-----------------:|:-----------------:|:-----------------:|:-----------------:|:-----------------:|\n",
